crates/narrative/tests/compile-fail/non-trait-story.stderr
error: expected `trait`
 --> tests/compile-fail/non-trait-story.rs:2:1
  |
2 | struct NotATrait {
  | ^^^^^^
